{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 46,
  "lineage": "a72bc765-fc84-01f7-e60b-7d135199551b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:197166329247:subnet/subnet-0e1c50a60b05cbd33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0e1c50a60b05cbd33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "197166329247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-01ca4331d5d9518b4"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:197166329247:subnet/subnet-0b8d095a2a239076a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0b8d095a2a239076a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "197166329247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-01ca4331d5d9518b4"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:197166329247:vpc/vpc-01ca4331d5d9518b4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-08f81d1bc18c02611",
            "default_route_table_id": "rtb-0431c44f660772d6d",
            "default_security_group_id": "sg-0ea7bade3e33721de",
            "dhcp_options_id": "dopt-0fdbb4f268d1f145d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-01ca4331d5d9518b4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0431c44f660772d6d",
            "owner_id": "197166329247",
            "tags": {
              "Name": "default vpc"
            },
            "tags_all": {
              "Name": "default vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:197166329247:security-group/sg-0a1ecf321a57714e7",
            "description": "enable mysql/aurora access on port 3306",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1ecf321a57714e7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "mysql/aurora access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0654f3a9875a21edd"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database security group",
            "name_prefix": "",
            "owner_id": "197166329247",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database security group"
            },
            "tags_all": {
              "Name": "database security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ca4331d5d9518b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default_vpc",
            "aws_security_group.webserver_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:197166329247:security-group/sg-0654f3a9875a21edd",
            "description": "enable http access on port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0654f3a9875a21edd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver security group",
            "name_prefix": "",
            "owner_id": "197166329247",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver security group"
            },
            "tags_all": {
              "Name": "webserver security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ca4331d5d9518b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default_vpc"
          ]
        }
      ]
    }
  ]
}